# gnome-session-slackware

./: README.md  meson.build
data/: meson.build
data/sysvinit/: gnome-session-start  gnome-session-stop
gnome-session/: gsm-manager.c  leader-sysvinit.c  meson.build
tools/: gnome-session-ctl.c
